@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Removed the 256-frame limit on .ani files - Michael
 - Renamed PlaySpeeh/StopSpeech to work around name collisions
   on OSX - Alex
 - Ending the battle with a simultaneous death no longer triggers an
